# IntraSeismic

./: README.md  environment.yml  install_env.sh  pyproject.toml
data/: Sleipner_94_il_57.npy  Sleipner_impedance_log.npy
intraseismic/: dataset.py  encondings.py  model.py  nonlinearOp.py  train.py  utils.py
notebooks/Marmousi/: Marm_data_creation.ipynb  Poststack_IS_Marm.ipynb  Prestack_IS_3nets_Marm.ipynb  config_marm.json  config_marm_pre.json
notebooks/SEAM/: Poststack_IS_SEAM.ipynb  SEAM_data_creation.ipynb  config_seam.json
notebooks/Sleipner/: Poststack_IS_Sleipner.ipynb  config_sleip.json
